Avoid flicker in logo

--- a/app/static/main.css
+++ b/app/static/main.css
@@ -208,6 +208,7 @@ a:focus {
 }
 
 #logo {
+  visibility: hidden;
   padding-right: 10px;
   width: 20px;
   height: 20px;
